--- a/Tincat (Work in progress)/index.html
+++ b/Tincat (Work in progress)/index.html
@@ -71,30 +71,30 @@
 
   </section>
 
- 
+
 
   <!-- Features -->
 
   <section id="features">
     <div class="container features">
-    <div class="row">
-      <div class="col-xl-4">
-        <i class="fa-solid fa-circle-check features-img"></i>
-        <h3 class="features-h3">Easy to use.</h3>
-        <p class="features-p">So easy to use, even your cat could do it.</p>
-      </div> 
-      <div class="col-xl-4">
-        <i class="fa-solid fa-bullseye features-img"></i>
-        <h3 class="features-h3">Elite Clientele</h3>
-        <p class="features-p">We have all the cats, the greatest cats.</p>
-      </div>
-      <div class="col-xl-4">
-        <i class="fa-solid fa-heart features-img"></i>
-        <h3 class="features-h3">Guaranteed to work.</h3>
-        <p class="features-p">Find the love of your cat's life or your money back.</p>
+      <div class="row">
+        <div class="col-xl-4">
+          <i class="fa-solid fa-circle-check features-img"></i>
+          <h3 class="features-h3">Easy to use.</h3>
+          <p class="features-p">So easy to use, even your cat could do it.</p>
+        </div>
+        <div class="col-xl-4">
+          <i class="fa-solid fa-bullseye features-img"></i>
+          <h3 class="features-h3">Elite Clientele</h3>
+          <p class="features-p">We have all the cats, the greatest cats.</p>
+        </div>
+        <div class="col-xl-4">
+          <i class="fa-solid fa-heart features-img"></i>
+          <h3 class="features-h3">Guaranteed to work.</h3>
+          <p class="features-p">Find the love of your cat's life or your money back.</p>
+        </div>
       </div>
     </div>
-  </div>
   </section>
 
 
@@ -102,13 +102,36 @@
 
   <section id="testimonials">
 
-    <h2>I no longer have to sniff other cats for love. I've found the hottest Persian on Tincat. Meow.</h2>
-    <img src="images/Cat03.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2>I no longer have to sniff other cats for love. I've found the hottest Persian on Tincat. Meow.</h2>
+          <img class="testimonial-img" src="images/Cat03.jpg" alt="dog-profile">
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item">
+          <h2 class="testimonial-text">My cat used to be so lonely, but with TinCat's help, they've found the love of
+            their life. I think.</h2>
+          <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
-    <!-- <h2 class="testimonial-text">My cat used to be so lonely, but with TinCat's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+
+
+
+
 
   </section>
 
@@ -116,10 +139,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
@@ -128,33 +151,63 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Cat's Needs</h2>
-    <p>Simple and affordable price plans for your and your Cat.</p>
+    <div class="pricing">
+      <h2>A Plan for Every Cat's Needs</h2>
+      <p>Simple and affordable price plans for your and your Cat.</p>
+    </div>
+    <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3">
+            <h4 class="my-0 fw-normal">Munchkin</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$0<small class="text-muted fw-light">/mo</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>5 Matches Per Day</li>
+              <li>10 Messages Per Day</li>
+              <li>Unlimited App Usage</li><br>
+            </ul>
+            <button type="button" class="w-100 btn btn-lg btn-outline-light card-btn">Sign up for free</button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3">
+            <h4 class="my-0 fw-normal">Snowshoe</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$49<small class="text-muted fw-light">/mo</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Unlimited Matches</li>
+              <li>Unlimited Messages</li>
+              <li>Unlimited App Usage</li><br>
+            </ul>
+            <button type="button" class="w-100 btn btn-lg btn-outline-light card-btn">Sign Up</button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3">
+            <h4 class="my-0 fw-normal">Persian</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$99<small class="text-muted fw-light">/mo</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Pirority Listing</li>
+              <li>Unlimited Matches</li>
+              <li>Unlimited Messages</li>
+              <li>Unlimited App Usage</li>
+            </ul>
+            <button type="button" class="w-100 btn btn-lg btn-outline-light card-btn">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
 
-    <h3>Munchkin</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
 
-
-    <h3>Snowshoe</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Persian</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
 
   </section>
 
